# proofwright

./: .gitignore  README.md  llm-wiki-tooling-handoff.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: checks.md  cli.md  concepts.md  configuration.md  extending.md  getting-started.md  index.md  install.md  retrieval.md
docs/api/: checks.md  config.md  model.md  plugins.md  retrieval.md
src/proofwright/: __init__.py  cli.py  config.py  graph.py  index.py  model.py  parse.py  plugins.py  report.py  runner.py
src/proofwright/checks/: __init__.py  citation.py  freshness.py  frontmatter.py  grade.py  graphlint.py  structural.py
src/proofwright/retrieval/: __init__.py  bm25.py  embed.py  engine.py  fusion.py  graph_expand.py  pagetext.py  rerank.py  tokenize.py  vector.py
templates/: CLAUDE.md  SKILL.md  index-hierarchical.md  index-template.md  page-template.md  wiki.toml.example
tests/: conftest.py  test_checks.py  test_cli.py  test_graph.py  test_index.py  test_markdown.py  test_parse.py  test_plugins.py  test_retrieval.py
tests/fixtures/: pw_provenance_plugin.py
tests/fixtures/mini-wiki-broken/: CLAUDE.md
tests/fixtures/mini-wiki-broken/raw/: source-a.md
tests/fixtures/mini-wiki-broken/wiki/: index.md  page-a.md  page-c.md
tests/fixtures/mini-wiki-good/: CLAUDE.md  wiki.toml
tests/fixtures/mini-wiki-good/raw/: source-a.md  source-b.md
tests/fixtures/mini-wiki-good/wiki/: index.md  page-a.md  page-b.md
tests/fixtures/mini-wiki-md/: CLAUDE.md  wiki.toml
(+3 files in other folders)
