[project]
name = "proofwright"
version = "0.1.0"
description = "Deterministic, zero-LLM structural checks for an LLM Wiki (Karpathy raw/→wiki/ pattern)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { 
    name = "Matt Anderson", 
    email = "matt@manderscience.com"
  }
]
keywords = ["llm-wiki", "linter", "knowledge-base", "markdown", "wikilinks"]
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
proofwright = "proofwright.cli:main"
pw = "proofwright.cli:main"

[project.entry-points."proofwright.checks"]
# Third-party packages register additional checks under this group.

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ty>=0.0.60",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src"]

[build-system]
requires = ["uv_build>=0.10,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "proofwright"
module-root = "src"
